tests/paczka1/small_fuzzy/40592488.err
Error in line 2: 9gzDZ A614 7,67
Error in line 5: rmg2 A241 75,8
